<resources>
    <string name="app_name">3491 Scanner</string>
    <string name="main_header">select one of the following buttons</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_wifi_scan">Wifi Scan</string>
    <string name="button_wifi_scan">Scan for WIFI networks</string>
    <string name="button_re_scan">Rescan for WIFI networks</string>
    <string name="action_search">Scan</string>
    <string name="button_channel_scan">Channel Scan (ovals)</string>
    <string name="title_activity_display_channel_scan">Channel Scan</string>
    <string name="title_activity_display_channel_scan2">Channel Scan2</string>
    <string name="button_channel_scan2">Channel Scan (boxes)</string>
    <string name="header_ssid">Network (SSID)</string>
    <string name="header_freq">Freq.</string>
    <string name="header_channel">Channel</string>
    <string name="header_strength">Strength</string>
    <string name="button_wifi_scan2">WIFI networks scan (new)</string>
    <string name="title_activity_display_wifi_scan2">Wifi Scan</string>
    <string name="title_activity_settings">3491 Scanner Settings</string>
</resources>
