<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andrpid="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:width="130sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_ssid"
        android:textSize="@dimen/myFontSize"
        android:textStyle="bold"
        android:ellipsize="end"
        android:singleLine="true">
    </TextView>
    <TextView
        android:width="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_freq"
        android:textSize="@dimen/myFontSize"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:width="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_channel"
        android:textSize="@dimen/myFontSize"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:width="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_strength"
        android:textSize="@dimen/myFontSize"
        android:textStyle="bold">
    </TextView>
</LinearLayout>
